@@ -73,7 +73,7 @@ check_info["cisco_mem"] = {
     "inventory_function"    : inventory_cisco_mem,
     "service_description"   : "Mem used %s",
     "has_perfdata"          : True,
-    "group"                 : "memory",
+    "group"                 : "cisco_mem",
     "snmp_scan_function"    : lambda oid: oid(".1.3.6.1.4.1.9.9.48.1.1.1.6.1"),
     "snmp_info"		    : ( ".1.3.6.1.4.1.9.9.48.1.1.1", [ "2", "5", "6", "7" ]),
 }
